@@ -2,12 +2,12 @@
     "id": "crate-dev",
     "instances": 1,
     "cpus": 0.25,
-    "mem": 50,
+    "mem": 128,
     "ports": [4050],
     "uris": [
-        "https://downloads.mesosphere.io/java/jre-7u76-linux-x64.tar.gz"
+        "https://cdn.crate.io/downloads/openjdk/jre1.7.0_79.tar.gz"
     ],
-    "cmd": "$(pwd)/jre*/bin/java $JAVA_OPTS -jar /tmp/crate-mesos.jar --zookeeper mesos-master-1:2181,mesos-master-2:2181,mesos-master-3:2181 --crate-cluster-name crate-dev --crate-version 0.47.7 --api-port $PORT0 --crate-http-port 4250 --crate-transport-port 4350 --resource-cpus 0.25 --resource-memory 1024",
+    "cmd": "$(pwd)/java-*/bin/java $JAVA_OPTS -jar /tmp/crate-mesos.jar --zookeeper mesos-master-1:2181,mesos-master-2:2181,mesos-master-3:2181 --crate-cluster-name crate-dev --crate-version 0.47.7 --api-port $PORT0 --crate-http-port 4250 --crate-transport-port 4350 --resource-cpus 0.25 --resource-memory 1024",
     "healthChecks": [
         {
             "protocol": "HTTP",
